--- a/style.css
+++ b/style.css
@@ -58,3 +58,33 @@ body {
     word-spacing: 5px;
     letter-spacing: 2px;
 }
+
+<!------About Start------->
+
+#about .btn{
+    border: 2px solid red;
+    width: 40%;
+    padding: 15px 22px;
+    background: #000;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+#about .btn a{
+    color:#fff;
+    text-decoration:none;
+    font-size: 1em;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+#about .btn a:hover{
+    border: 2px solid #1ebba3;
+    cursor: pointer;
+}
+
+
+
+
+
+
