--- a/style.css
+++ b/style.css
@@ -59,10 +59,10 @@ body {
     letter-spacing: 2px;
 }
 
-<!------About Start------->
+/*------About Start-------*/
 
 #about .btn{
-    border: 2px solid red;
+    border: 2px solid transparent;
     width: 40%;
     padding: 15px 22px;
     background: #000;
@@ -72,17 +72,56 @@ body {
 
 #about .btn a{
     color:#fff;
-    text-decoration:none;
+    text-decoration: none;
     font-size: 1em;
     font-weight: bold;
     text-transform: uppercase;
 }
 
-#about .btn a:hover{
+#about .btn:hover{
+    border: 2px solid #1ebba3;
+    cursor: pointer;
+}
+/*-------About End-----------*/
+
+
+/*------Services Start-------*/
+
+#services .button{
+    border: 2px solid transparent;
+    width: 40%;
+    padding: 15px 22px;
+    background: #000;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+#services .button a{
+    color:#fff;
+    text-decoration: none;
+    font-size: 1em;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+#services .button:hover{
     border: 2px solid #1ebba3;
     cursor: pointer;
 }
 
+/*-------Services End-----------*/
+
+
+/*------Newsletter Start-------*/
+.sec1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background: #f8fafb;
+}
+/*-------Newsletter End------------*/
 
 
 
